# PokerHand

./: .gitignore  CMakeLists.txt  PokerHand.pro  README.md
app/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt  card.cpp  card.h  constants.h  pokercard.h  pokerhand.cpp  pokerhand.h  pokerhandcomparer.cpp  pokerhandcomparer.h  pokerhandranker.cpp  pokerhandranker.h  src.pro
test/: CMakeLists.txt  test_card.cpp  test_pokerhand.cpp  test_pokerhandcomparer.cpp  test_pokerhandranker.cpp
tests/: catch2.h  main.cpp  tests.pro
